--- a/app/views/quota_graph.html
+++ b/app/views/quota_graph.html
@@ -14,7 +14,8 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-xl">Quota {{ context.quota_order_number_id }}</h1>
+            <h1 class="govuk-heading-l">Quota {{ context.quota_order_number_id }}</h1>
+            <p>Changes to quota balance for quota definition {{ context.quota_definition_sid }} running from 1 Jan 2022 to 30 June 2022.</p>
 
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/billboard.js/dist/billboard.min.css">
 
