--- a/app/views/quota_results.html
+++ b/app/views/quota_results.html
@@ -125,7 +125,7 @@
                                                 <a href="/quota_graph?quota_order_number_id={{ context.quota_order_number_id }}&quota_definition_sid={{ qd.quota_definition_sid }}">See graph of quota balance events</a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="https://www.trade-tariff.service.gov.uk/quota_search?order_number={{ context.quota_order_number_id }}">See quota online</a>
+                                                <a target="_blank" href="https://www.trade-tariff.service.gov.uk/quota_search?order_number={{ context.quota_order_number_id }}#{{ qd.quota_definition_sid }}-order-number-{{ context.quota_order_number_id }}">See quota online</a>
                                             </li>
                                         </ul>
                                     </div>
